Fix #70. Convert fonts using font squirrle to see if it will make fonts show up on IE11

--- a/css/my-styles.scss
+++ b/css/my-styles.scss
@@ -12,6 +12,19 @@
 }
 
 @font-face {
+    font-family: 'telegramarender';
+    src: url('../font/telegrama_render-webfont.eot');
+    src: url('../font/telegrama_render-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/telegrama_render-webfont.woff2') format('woff2'),
+         url('../font/telegrama_render-webfont.woff') format('woff'),
+         url('../font/telegrama_render-webfont.ttf') format('truetype'),
+         url('../font/telegrama_render-webfont.svg#telegramarender') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
   font-family: "K22_Spotty_Face";
   // http://www.fontspace.com/toto/k22-spotty-face
   // NOTE: the otf that came with this didn't work with Firefox, 
@@ -288,6 +301,7 @@ $keys-border-color: darken(white, 25%);
 }
 
 .ok-button-text {
+  // font-family: "telegrama_render";
   font-family: "telegrama_render";
   // font-weight: 100; // This font isn't affected by weight
   display: inline-block;
